# api/src/main/java/com/pokestore/api/controller/CustomerController.java
@@ -1,8 +1,11 @@
 package com.pokestore.api.controller;
 
 import com.pokestore.api.generated.api.CustomersApi;
+import com.pokestore.api.generated.model.CustomersDto;
 import com.pokestore.api.generated.model.OrderDto;
+import com.pokestore.api.generated.model.UserSearchQueryDto;
 import com.pokestore.api.mapper.DtoMapper;
+import com.pokestore.core.domain.command.UserSearchQuery;
 import com.pokestore.core.port.in.CustomerUseCase;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -25,4 +28,11 @@ public class CustomerController implements CustomersApi {
         var orders = customerUseCase.getOrdersByCustomerId(id);
         return ResponseEntity.ok(dtoMapper.toOrderDtoList(orders));
     }
+
+    @Override
+    public ResponseEntity<CustomersDto> searchCustomers(String name, String email) {
+        UserSearchQuery query = dtoMapper.toUserSearchQuery(name,email);
+        return ResponseEntity.ok(dtoMapper.toCustomersDto(customerUseCase.search(query)));
+    }
+
 }
